настроил генерацию swagger и postman для каждого из сервисов
