# backend/docs/auth/swagger.json
@@ -1,19 +1,16 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "API for Barter Port",
+        "title": "Barter Port API",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "basePath": "/",
     "paths": {
         "/auth/login": {
             "post": {
@@ -35,7 +32,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_auth_transport.loginReq"
+                            "$ref": "#/definitions/transport.loginReq"
                         }
                     }
                 ],
@@ -43,31 +40,31 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_auth_transport.loginResp"
+                            "$ref": "#/definitions/transport.loginResp"
                         }
                     },
                     "400": {
                         "description": "Invalid request or credentials",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Incorrect password",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     },
                     "403": {
                         "description": "Email not verified",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     }
                 }
@@ -90,7 +87,7 @@ const docTemplate = `{
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     }
                 }
@@ -110,13 +107,13 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_auth_transport.meResp"
+                            "$ref": "#/definitions/transport.meResp"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     }
                 }
@@ -139,19 +136,19 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_auth_transport.refreshResponse"
+                            "$ref": "#/definitions/transport.refreshResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized or invalid token",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     }
                 }
@@ -177,7 +174,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_auth_transport.registerReq"
+                            "$ref": "#/definitions/transport.registerReq"
                         }
                     }
                 ],
@@ -185,19 +182,19 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_auth_transport.registerResp"
+                            "$ref": "#/definitions/transport.registerResp"
                         }
                     },
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     }
                 }
@@ -223,19 +220,19 @@ const docTemplate = `{
                     "400": {
                         "description": "Invalid request or token",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "User not found",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
+                            "$ref": "#/definitions/http_api.ErrorResponse"
                         }
                     }
                 }
@@ -243,7 +240,7 @@ const docTemplate = `{
         }
     },
     "definitions": {
-        "barter-port_internal_libs_platform_http_api.ErrorResponse": {
+        "http_api.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -252,7 +249,7 @@ const docTemplate = `{
                 }
             }
         },
-        "internal_auth_transport.loginReq": {
+        "transport.loginReq": {
             "type": "object",
             "properties": {
                 "email": {
@@ -263,7 +260,7 @@ const docTemplate = `{
                 }
             }
         },
-        "internal_auth_transport.loginResp": {
+        "transport.loginResp": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -271,7 +268,7 @@ const docTemplate = `{
                 }
             }
         },
-        "internal_auth_transport.meResp": {
+        "transport.meResp": {
             "type": "object",
             "properties": {
                 "userId": {
@@ -279,7 +276,7 @@ const docTemplate = `{
                 }
             }
         },
-        "internal_auth_transport.refreshResponse": {
+        "transport.refreshResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -287,7 +284,7 @@ const docTemplate = `{
                 }
             }
         },
-        "internal_auth_transport.registerReq": {
+        "transport.registerReq": {
             "type": "object",
             "properties": {
                 "email": {
@@ -298,7 +295,7 @@ const docTemplate = `{
                 }
             }
         },
-        "internal_auth_transport.registerResp": {
+        "transport.registerResp": {
             "type": "object",
             "properties": {
                 "email": {
@@ -310,22 +307,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0.0",
-	Host:             "",
-	BasePath:         "/",
-	Schemes:          []string{"http", "https"},
-	Title:            "Barter Port API",
-	Description:      "API for Barter Port",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
